--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url(https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap);
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family:
+    Open Sans,
+    sans-serif;
   margin: 0;
   display: flex;
   width: 100%;
@@ -9,11 +11,14 @@ body {
   font-size: medium;
   background-color: #181a1b;
   color: #e8e6e3;
-  flex-direction: column;
+  flex-direction: column-reverse;
 }
 
 input[type='file'] {
   width: 100%;
+}
+
+input[type='range'] {
 }
 
 input[type='file']::file-selector-button {
@@ -156,13 +161,13 @@ button:disabled {
 #float {
   z-index: 99999;
   position: absolute;
-  margin-top: 2vh;
+  margin-bottom: 2vh;
   margin-left: 2vh;
 }
 
 .float-panel {
   background-color: #181a1b;
-  padding: 20%;
+  padding: 2vh;
   width: max-content;
   max-height: 90vh;
 }
